// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorFieldPicker renders a color picker in a RichTooltip 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ThemeProvider
    theme={
      Object {
        "breakpoints": Array [
          "30rem",
          "48rem",
          "64rem",
          "75rem",
          "90rem",
        ],
        "colors": Object {
          "palette": Object {
            "blue000": "#f7fcff",
            "blue100": "#e0f2ff",
            "blue200": "#bfe3ff",
            "blue300": "#6fbcf7",
            "blue400": "#49a9f2",
            "blue500": "#0087e1",
            "blue600": "#0059b2",
            "blue700": "#00418c",
            "blue800": "#0f2f66",
            "blue900": "#08284d",
            "charcoal000": "#FBFBFC",
            "charcoal100": "#F5F6F7",
            "charcoal200": "#DEE1E5",
            "charcoal300": "#C1C6CC",
            "charcoal400": "#939BA5",
            "charcoal500": "#707781",
            "charcoal600": "#4C535B",
            "charcoal700": "#343C42",
            "charcoal800": "#262D33",
            "charcoal900": "#262D33",
            "green000": "#f2fff5",
            "green100": "#e0ffe7",
            "green200": "#b4fac2",
            "green300": "#67e591",
            "green400": "#33cc73",
            "green500": "#24b25f",
            "green600": "#0e8c42",
            "green700": "#0b6b38",
            "green800": "#08522d",
            "green900": "#06381f",
            "primary500": "#64518A",
            "primary600": "#473764",
            "primary700": "#2A1B60",
            "purple000": "#F3F2FF",
            "purple100": "#E8E5FF",
            "purple200": "#BFB2FF",
            "purple300": "#9785F2",
            "purple400": "#6C43E0",
            "purple500": "#4F2ABA",
            "purple600": "#412399",
            "purple700": "#341C7A",
            "purple800": "#291661",
            "purple900": "#1E1047",
            "red000": "#FFF2F4",
            "red100": "#FFE5E9",
            "red200": "#FFB8C1",
            "red300": "#FF667A",
            "red400": "#ED3B53",
            "red500": "#CC1F36",
            "red600": "#B2121F",
            "red700": "#990F14",
            "red800": "#730B0F",
            "red900": "#52080B",
            "textInverted": "#FFFFFF",
            "transparent": "transparent",
            "white": "#FFFFFF",
            "yellow000": "#FFF7E8",
            "yellow100": "#FFEBC4",
            "yellow200": "#FFDB96",
            "yellow300": "#FFCA62",
            "yellow400": "#FFB72B",
            "yellow500": "#FFA800",
            "yellow600": "#EF9E00",
            "yellow700": "#CC8600",
            "yellow800": "#A56D00",
            "yellow900": "#724B00",
          },
          "semanticColors": Object {
            "danger": Object {
              "altText": "#ED3B53",
              "borderColor": "#C1C6CC",
              "dark": "#B2121F",
              "darker": "#990F14",
              "light": "#FFE5E9",
              "lighter": "#FFF2F4",
              "linkColor": "#0087e1",
              "main": "#CC1F36",
              "text": "#FFFFFF",
            },
            "neutral": Object {
              "altText": "#4C535B",
              "borderColor": "#C1C6CC",
              "dark": "#707781",
              "darker": "#4C535B",
              "light": "#F5F6F7",
              "lighter": "#FBFBFC",
              "linkColor": "#0087e1",
              "main": "#939BA5",
              "text": "#FFFFFF",
            },
            "primary": Object {
              "altText": "#6C43E0",
              "borderColor": "#C1C6CC",
              "dark": "#473764",
              "darker": "#2A1B60",
              "light": "#E8E5FF",
              "lighter": "#F3F2FF",
              "linkColor": "#0087e1",
              "main": "#64518A",
              "text": "#FFFFFF",
            },
            "secondary": Object {
              "altText": "#6C43E0",
              "borderColor": "#C1C6CC",
              "dark": "#473764",
              "darker": "#2A1B60",
              "light": "#E8E5FF",
              "lighter": "#F3F2FF",
              "linkColor": "#0087e1",
              "main": "#64518A",
              "text": "#FFFFFF",
            },
          },
        },
        "easings": Object {
          "ease": "cubic-bezier(0.86, 0, 0.07, 1)",
          "easeIn": "cubic-bezier(0.895, 0.03, 0.685, 0.22);",
          "easeInBack": "cubic-bezier(0.6, -0.28, 0.735, 0.045)",
          "easeOut": "cubic-bezier(0.165, 0.84, 0.44, 1)",
          "easeOutBack": "cubic-bezier(0.175, 0.885, 0.32, 1.275)",
        },
        "fontSizes": Object {
          "large": "1.125rem",
          "medium": "1rem",
          "small": "0.875rem",
          "xlarge": "1.375rem",
          "xsmall": "0.75rem",
          "xxlarge": "1.5625rem",
          "xxsmall": "0.6875rem",
          "xxxlarge": "2.25rem",
          "xxxxlarge": "2.875rem",
        },
        "fontWeights": Object {
          "bold": 700,
          "extraBold": 600,
          "light": 300,
          "normal": 400,
          "semiBold": 600,
        },
        "fonts": Object {
          "brand": "'Open Sans', Helvetica, Arial, sans-serif",
          "code": "'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace",
        },
        "lineHeights": Object {
          "large": "1.75rem",
          "medium": "1.5rem",
          "small": "1.25rem",
          "xlarge": "2rem",
          "xsmall": "1rem",
          "xxlarge": "2.5rem",
          "xxsmall": "1rem",
          "xxxlarge": "3.25rem",
          "xxxxlarge": "4rem",
        },
        "radii": Object {
          "large": "0.5rem",
          "medium": "0.25rem",
          "none": "0rem",
          "small": "0.125rem",
          "xsmall": "0.0625rem",
        },
        "reset": [Function],
        "shadows": Object {
          "1": "0px 1px 8px rgba(0, 0, 0, 0.08), 0px 1px 1px rgba(0, 0, 0, 0.05)",
          "2": "0 2px 12px rgba(0, 0, 0, 0.11), 0 1px 4px rgba(0, 0, 0, 0.04)",
          "3": "0 3px 18px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.04)",
          "4": "0 4px 20px rgba(0, 0, 0, 0.14), 0 1px 4px rgba(0, 0, 0, 0.04),  0 10px 8px 4px rgba(0, 0, 0, 0.01)",
          "5": "0 2px 30px rgba(0, 0, 0,.16), 0 1px 4px rgba(0, 0, 0, 0.04),  0 14px 10px 8px rgba(0, 0, 0, 0.02)",
          "6": "0 5px 42px 0px rgba(0, 0, 0,.18),  0 1px 4px rgba(0, 0, 0, 0.05), 0 16px 20px 10px rgba(0, 0, 0, 0.025)",
        },
        "space": Object {
          "large": "1.25rem",
          "medium": "1rem",
          "none": "0rem",
          "small": "0.75rem",
          "xlarge": "2rem",
          "xsmall": "0.5rem",
          "xxlarge": "2.5rem",
          "xxsmall": "0.25rem",
          "xxxlarge": "3.75rem",
          "xxxxlarge": "5rem",
        },
        "transitions": Object {
          "durationComplex": "300ms",
          "durationIntricate": "500ms",
          "durationModerate": "300ms",
          "durationQuick": "150ms",
          "durationRapid": "100ms",
          "durationSimple": "200ms",
        },
      }
    }
  >
    <Unknown
      open={true}
    />
  </ThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "open": true,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "open": true,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ColorFieldPicker with a label 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0.5rem;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-top: auto;
}

.c7 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0 0.25rem 0.25rem 0;
  border-color: #C1C6CC;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 0.5rem;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 600;
  margin-right: 0.5rem;
  text-align: right;
  width: 20%;
}

.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: 1px solid;
  border-radius: 0.25rem 0 0 0.25rem;
  border-right: 0;
  border-color: #C1C6CC;
  background-color: #e1ff83;
  height: 28px;
  width: 33px;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    Pick a color
  </label>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          />
        </div>
        <div
          className="c3"
        >
          <input
            className="c7"
            onChange={[Function]}
            type="text"
            value="#e1ff83"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorFieldPicker with a named color and size values 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0.5rem;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 600;
  margin-right: 0.5rem;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-top: auto;
}

.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0 0.25rem 0.25rem 0;
  border-color: #C1C6CC;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: 1px solid;
  border-radius: 0.25rem 0 0 0.25rem;
  border-right: 0;
  border-color: #C1C6CC;
  background-color: #0000ff;
  height: 28px;
  width: 33px;
}

<div
  className="c0"
>
  <label
    className="c1"
  />
  <div
    className="c0"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          />
        </div>
        <div
          className="c2"
        >
          <input
            className="c6"
            onChange={[Function]}
            type="text"
            value="blue"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorFieldPicker with a validation message 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0.5rem;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-top: auto;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 0.5rem;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 600;
  margin-right: 0.5rem;
  text-align: right;
  width: 20%;
}

.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: 1px solid;
  border-radius: 0.25rem 0 0 0.25rem;
  border-right: 0;
  border-color: #C1C6CC;
  background-color: #4c6670;
  height: 28px;
  width: 33px;
}

.c7 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0 0.25rem 0.25rem 0;
  border-color: #C1C6CC;
  background-color: #FFF2F4;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c8 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #990F14;
  font-size: 0.75rem;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    Pick a color
  </label>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          />
        </div>
        <div
          className="c3"
        >
          <input
            className="c7"
            onChange={[Function]}
            type="text"
            value="#4c6670"
          />
        </div>
      </div>
    </div>
    <div
      className="c8"
    >
      Error!
    </div>
  </div>
</div>
`;

exports[`ColorFieldPicker with hidden input 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0.5rem;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 600;
  margin-right: 0.5rem;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-top: auto;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: 1px solid;
  border-radius: 0.25rem 0 0 0.25rem;
  border-right: 0;
  border-color: #C1C6CC;
  background-color: #ffffff;
  height: 28px;
  width: 33px;
}

.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0 0.25rem 0.25rem 0;
  border-color: #C1C6CC;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

<div
  className="c0"
>
  <label
    className="c1"
  />
  <div
    className="c0"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          />
        </div>
        <div
          className="c2"
        >
          <input
            className="c6"
            onChange={[Function]}
            type="hidden"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Default ColorFieldPicker 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0.5rem;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 600;
  margin-right: 0.5rem;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-top: auto;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: 1px solid;
  border-radius: 0.25rem 0 0 0.25rem;
  border-right: 0;
  border-color: #C1C6CC;
  background-color: #ffffff;
  height: 28px;
  width: 33px;
}

.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-radius: 0 0.25rem 0.25rem 0;
  border-color: #C1C6CC;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

<div
  className="c0"
>
  <label
    className="c1"
  />
  <div
    className="c0"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          />
        </div>
        <div
          className="c2"
        >
          <input
            className="c6"
            onChange={[Function]}
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
